--- a/xr.html
+++ b/xr.html
@@ -67,7 +67,7 @@
         <img src="./assets/images/work005-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">002 : Realidad Extendida</h1>
+            <h1 class="h2">002 : Realidades Extendidas</h1>
 
           <p>Desde la primera edición del <a href="https://levfestival.com/">Festival LEV Matadero</a> en el 2019 colaboro en el diseño y producción de la sección VRTX de realidad extendida.
 		  También he formado parte del equipo de desarrollo de Planet LEV Matadero, coordinando las aportaciones de un equipo interdisciplinar
