--- a/works.html
+++ b/works.html
@@ -87,7 +87,7 @@
                       </a>
                       <div class="card-container">
                         <h4>002/006</h4>
-                        <h3>Realidad Extendida</h3>
+                        <h3>Realidades Extendidas</h3>
                         <p>Desde la primera edición del Festival LEV Matadero trabajo en la sección VRTX.</p>
                         <a href="./xr.html" class="btn btn-default">Ampliar</a>
                       </div>
