--- a/about.html
+++ b/about.html
@@ -76,8 +76,8 @@
 				  de coordinar la sección de <a href="xr.html">realidad virtual</a> del festival LEV Matadero. Aunque siempre hay cosas nuevas.
 				  Si quieres saber más, <a href="contact.html">pregúntame.</p>
                 </div>
-                <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/profil.jpg" class="img-responsive" alt="">
+                <div class="col-xs-12 col-md-6"><br /><br />
+                  <img src="./assets/images/profil2.jpg" class="img-responsive" alt="">
                 </div>
               </div>
             </div>
