--- a/public.html
+++ b/public.html
@@ -110,6 +110,16 @@
                 <li>Curso 2021-2022. Master Universitario en Investigación Musical. Módulo 5: Aplicación de la Tecnología a la Música. Universidad Europea Online. </li>
 			</ul>
 		</p>
+		
+		<p> Formación académica:
+			<ul>
+                <li>Ingeniería Técnica en Informática de Sistemas. Universidad Complutense de Madrid. 2002-2006.</li>
+				<li>Diplomatura en Magisterio, especialidad en Educación Primaria. Centro de Estudios Superiores "Don Bosco" adscrito a la Universidad Complutense de Madrid. 2003-2007.</li>
+				<li>Grado en Musicología y música informática. Hochschule für Musik Karlsruhe. Alemania. 2012-2015.</li>
+				<li>Master en Investigación Musical. Universidad Internacional de la Rioja. 2019-2021.</li>
+				<li>Master en Ingeniería Informática. Universidad Autónoma de Madrid. En curso.</li>
+			</ul>
+		</p>
         </div>
       </div>
 
