--- a/works.html
+++ b/works.html
@@ -76,7 +76,7 @@
                       <div class="card-container">
                         <h4>001/006</h4>
                         <h3>Escuela Municipal</h3>
-                        <p>Desde esta escuela trabajo para dar a conocer la música contemporánea</p>
+                        <p>Desde esta escuela trabajo actualmente para dar a conocer la música contemporánea</p>
                         <a href="./pradera.html" class="btn btn-default">Ampliar</a>
                       </div>
                     </div>
@@ -88,7 +88,7 @@
                       <div class="card-container">
                         <h4>002/006</h4>
                         <h3>Realidades Extendidas</h3>
-                        <p>Desde la primera edición del Festival LEV Matadero trabajo en la sección VRTX.</p>
+                        <p>Desde la edición del Festival LEV Matadero 2019 trabajo en la sección VRTX.</p>
                         <a href="./xr.html" class="btn btn-default">Ampliar</a>
                       </div>
                     </div>
