--- a/musalgo.html
+++ b/musalgo.html
@@ -78,6 +78,13 @@
 		  <p>Un algoritmo es una serie de instrucciones que permiten la realización de una tarea compleja. Aunque Ada Lovelace (1815-1852) fue la primera persona en escribir de forma consciente y publicar un algoritmo específicamente diseñado para ser ejecutado por una máquina, en realidad la humanidad llevaba siglos usando algoritmos en tareas de la vida diaria. Así una receta de cocina, un patrón para tejer un jersey o un reto de baile viral tienen en común con un programa informático que se pueden dividir en pasos concretos y que éstos deben realizarse en un orden determinado y no en otro. Los artistas, que buscan constantemente lenguajes con los que expresarse, también hacen uso de secuencias, series e instrucciones para transmitir y expresar ideas. Entre estos artistas están Iannis Xenakis (1922-2001) y los participantes en los seminarios y conferencias del Centro de Cálculo de la Universidad de Madrid, cuyos trabajos están representados en la Colección del Museo.</p>
 		  <p>En el centenario del nacimiento de Xenakis, el Museo Reina Sofía celebra esta forma de arte con un conjunto de actividades educativas cuyo objetivo es dar a conocer estas prácticas, desarrollar una mentalidad crítica sobre el uso de los algoritmos en nuestro día a día y ayudar a reconocer la belleza que existe en ellos, una belleza que trasciende los límites de espacio y tiempo formando parte del mundo infinito y abstracto de la lógica y de las matemáticas.</p>
           <img src="assets/images/algoritmo.jpg" width="471" height="458"> <p>José Luis Alexanco, Programa MOUVNT, 1969-1973, Museo Reina Sofía</p>
+		  
+		  <p><br /></p>
+		 <h3>Miniaturas Algorítmicas</h3> 
+		   <p>Con motivo del proyecto comisarial {Serie(secuencia)}.instruccion, y para facilitar la participación de todo tipo de público, siendo un proyecto fundamentalmente educativo compuse cinco <a href="https://revistaseug.ugr.es/index.php/sobre/article/view/25116">miniaturas algorítmicas</a> para caja de música que se publicaron en la revista SOBRE de la Universidad de Granada.</p>
+		   <img src="assets/images/work013-hover.png" width="800" height="540"> <p>Cinco miniaturas algorítmicas. Revista Sobre. Año 2022.</p>
+		   <p>Estas miniaturas no son piezas cerradas, son textos que indican los pasos a seguir para crear tu propia pieza. Para ello necesitarás una caja de música que permita introducir una partitura creada por ti en forma de rollo de pianola, en la que cada agujero representa una nota musical.</p>
+		   
         </div>
       </div>
 
