--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 				  en investigación musical en la UNIR, y soy docente en la UEM. Fui coordinador de la cuarta conferencia
 				  internacional de <a href="livecoding.html">live coding</a> y publico regularmente en revistas de educación musical especializadas.</p>
                   <h3>Educación</h3>
-                  <p>He trabajado en educación toda mi vida. Actualmente soy director de la <a href="pradera.html">Escuela Municipal</a> de Música y Danza
+                  <p>He trabajado en educación toda mi vida. Actualmente soy profesor de la <a href="pradera.html">Escuela Municipal</a> de Música y Danza
 				  "María Dolores Pradera". Es una escuela muy especial con un proyecto innovador en música y tecnología.
 				  También soy cofundador del proyecto <a href="eoe.html">Escuela de Oficios Electrosonoros</a> en el que hemos
 				  desarrollado experiencias de arte educación en museos y centros educativos.</p>
