--- a/pradera.html
+++ b/pradera.html
@@ -69,7 +69,7 @@
           <div class="text-center">
             <h1 class="h2">001 : Escuela Municipal de Música y Danza</h1>
           </div>
-          <p>Desde el curso 2018-2019 tengo la suerte de dirigir la Escuela Municipal de Música y
+          <p>Desde el año 2018 al 2023 he tenido la suerte de dirigir la Escuela Municipal de Música y
 		  Danza "María Dolores Pradera". Uno de los objetivos que nos planteamos como equipo es hacer
 		  de esta escuela un lugar donde se promueva la música contemporánea: ya sea improvisación, arte
 		  sonoro, música electrónica y/o electroacústica.</p>
