--- a/musalgo.html
+++ b/musalgo.html
@@ -70,20 +70,23 @@
             <h1 class="h2">003 : Música Algorítmica</h1>
           </div>
 		  <p><br /></p>
-          <p>Desde mis años de formación en alemania cuando el gran compositor Denis Lorrain nos impartía la asignatura de música algorítmica tengo especial interés por la utilización de algoritmos como forma de creación, y especialmente creación sonora. La sonificación, la combinatoria, la aleatoriedad y probabilidad, las estructuras fractales, los autómatas celulares, los sistemas L, y tantos otros algoritmos se usan hoy en día para crear música entre otras cosas, con o sin la ayuda de un ordenador. </p>
+		<p>Desde mis años de formación en alemania cuando el gran compositor Denis Lorrain nos impartía la asignatura de música algorítmica tengo especial interés por la utilización de algoritmos 
+		como forma de creación, y especialmente creación sonora. La sonificación, la combinatoria, la aleatoriedad y probabilidad, las estructuras fractales, los autómatas celulares, los sistemas L,
+			y tantos otros algoritmos se usan hoy en día para crear música entre otras cosas, con o sin la ayuda de un ordenador. </p>
 
-			<p>A lo largo del año 2022 he comisariado <a href="https://www.museoreinasofia.es/actividades/serie-secuencia-instruccion">una serie de actividades en el Museo Nacional Centro de Arte Reina Sofía</a> en torno a música algorítmica con motivo del centenario del nacimiento de Iannis Xenakis. En este ciclo ha habido desde talleres a conferencias, conciertos y acciones orientadas a desarrollar una  mirada crítica en torno a esta forma de arte.</p> 
-			<p><br /></p>
-		 <h3>{Serie(secuencia)}.instruccion</h3>
-		  <p>Un algoritmo es una serie de instrucciones que permiten la realización de una tarea compleja. Aunque Ada Lovelace (1815-1852) fue la primera persona en escribir de forma consciente y publicar un algoritmo específicamente diseñado para ser ejecutado por una máquina, en realidad la humanidad llevaba siglos usando algoritmos en tareas de la vida diaria. Así una receta de cocina, un patrón para tejer un jersey o un reto de baile viral tienen en común con un programa informático que se pueden dividir en pasos concretos y que éstos deben realizarse en un orden determinado y no en otro. Los artistas, que buscan constantemente lenguajes con los que expresarse, también hacen uso de secuencias, series e instrucciones para transmitir y expresar ideas. Entre estos artistas están Iannis Xenakis (1922-2001) y los participantes en los seminarios y conferencias del Centro de Cálculo de la Universidad de Madrid, cuyos trabajos están representados en la Colección del Museo.</p>
-		  <p>En el centenario del nacimiento de Xenakis, el Museo Reina Sofía celebra esta forma de arte con un conjunto de actividades educativas cuyo objetivo es dar a conocer estas prácticas, desarrollar una mentalidad crítica sobre el uso de los algoritmos en nuestro día a día y ayudar a reconocer la belleza que existe en ellos, una belleza que trasciende los límites de espacio y tiempo formando parte del mundo infinito y abstracto de la lógica y de las matemáticas.</p>
-          <img src="assets/images/algoritmo.jpg" width="471" height="458"> <p>José Luis Alexanco, Programa MOUVNT, 1969-1973, Museo Reina Sofía</p>
-		  
+			<p>A lo largo del año 2022 he comisariado <a href="https://www.museoreinasofia.es/actividades/serie-secuencia-instruccion">una serie de actividades en el Museo Nacional Centro de Arte 
+				Reina Sofía</a> en torno a música algorítmica con motivo del centenario del nacimiento de Iannis Xenakis. 
+				Con motivo de este ciclo realicé un ciclo de podcasts sobre música algorítmica.</p>
+			<p>
+				<iframe src='https://radio.museoreinasofia.es/node/2523/embed' frameborder="0" width="100%" height="315"></iframe>
+
+			</p>
 		  <p><br /></p>
 		 <h3>Miniaturas Algorítmicas</h3> 
 		   <p>Con motivo del proyecto comisarial {Serie(secuencia)}.instruccion, y para facilitar la participación de todo tipo de público, siendo un proyecto fundamentalmente educativo compuse cinco <a href="https://revistaseug.ugr.es/index.php/sobre/article/view/25116">miniaturas algorítmicas</a> para caja de música que se publicaron en la revista SOBRE de la Universidad de Granada.</p>
 		   <img src="assets/images/work013-hover.png" width="800" height="540"> <p>Cinco miniaturas algorítmicas. Revista Sobre. Año 2022.</p>
-		   <p>Estas miniaturas no son piezas cerradas, son textos que indican los pasos a seguir para crear tu propia pieza. Para ello necesitarás una caja de música que permita introducir una partitura creada por ti en forma de rollo de pianola, en la que cada agujero representa una nota musical.</p>
+		   <p>Estas miniaturas no son piezas cerradas, son textos que indican los pasos a seguir para crear tu propia pieza. Para ello necesitarás una caja de música que permita introducir 
+			   una partitura creada por ti en forma de rollo de pianola, en la que cada agujero representa una nota musical.</p>
 		   
         </div>
       </div>
