--- a/public.html
+++ b/public.html
@@ -107,8 +107,16 @@
 
 		<p> Docencia:
 			<ul>
-                <li>Curso 2021-2022. Master Universitario en Investigación Musical. Módulo 5: Aplicación de la Tecnología a la Música. Universidad Europea Online. </li>
-		<li>Curso 2022-2023. Master Universitario en Investigación Musical. Módulo 5: Aplicación de la Tecnología a la Música. Universidad Europea Online. </li>
+		<li><b>Curso 2023-2024</b>. 
+			<ul>
+				<li>Grado en Musicología. Recursos tecnológicos para la educación musical. Universidad Europea Online.</li>
+				<li>Master Universitario en Investigación Musical. Módulo 5: Aplicación de la Tecnología a la Música. Universidad Europea Online. </li>
+				<li>Grado en Diseño. Introducción a la Realidad Virtual y la Realidad Aumentada. Escuela Superior de Diseño de Madrid.</li>
+				<li>Master en Diseño Interactivo. Introducción a la Realidad Aumentada. Escuela Superior de Diseño de Madrid.</li>
+			</ul>
+		</li>
+                <li><b>Curso 2022-2023</b>. Master Universitario en Investigación Musical. Módulo 5: Aplicación de la Tecnología a la Música. Universidad Europea Online. </li>
+		<li><b>Curso 2021-2022</b>. Master Universitario en Investigación Musical. Módulo 5: Aplicación de la Tecnología a la Música. Universidad Europea Online. </li>
 			</ul>
 		</p>
 		
