--- a/public.html
+++ b/public.html
@@ -94,14 +94,16 @@
 
 		<p> Publicaciones:
 			  <ul>
-                <li>Jara, J. (2019). Experiencias educativas en torno a la música electrónica. <em>Eufonía: Didáctica de la música</em>, ISSN 1135-6308, ISSN-e 2014-4741, Nº 79, 2019, págs. 14-20. (<a href="https://www.grao.com/es/producto/escuela-de-oficios-electrosonoros-eu07995868">enlace</a>)</li>
+                <li>Jara, J. (2019). Experiencias educativas en torno a la música electrónica. <em>Eufonía: Didáctica de la música</em>, ISSN 1135-6308, ISSN-e 2014-4741, Nº 79, 2019, págs. 14-20. (<a href="https://www.grao.com/revistas/tic-y-creacion-sonora-32690">enlace</a>)</li>
 		<li>Jara, J. (coord.) (2019). Actas de la cuarta conferencia internacional de live coding. Edita: Medialab Prado. ISBN: 978 84 18299 08 7. (<a href="https://iclc.toplap.org/2019/index.html">enlace</a>)</li>
-		<li>Jara, J. (2020). <em>Educar en otros mundos sonoros</em>. Zenodo. https://doi.org/10.5281/zenodo.4534134. (<a ="https://zenodo.org/record/4534134#.YdM9J2hByUk">enlace</a>)</li>
+		<li>Jara, J. (2020). <em>Educar en otros mundos sonoros</em>. Zenodo. https://doi.org/10.5281/zenodo.4534134. (<a href="https://zenodo.org/record/4534134#.YdM9J2hByUk">enlace</a>)</li>
                 <li>Sastre Martínez, Jorge & Lloret, Nuria & Scrani, Stefano & Dannenberg, Roger & Jara, Jesus. (2020). Collaborative Creation with Soundcool for Socially Distanced Education. Journal of the Plainsong and Mediaeval Music Society. 18. 53-58. (<a href="https://www.researchgate.net/publication/361463919_Collaborative_Creation_with_Soundcool_for_Socially_Distanced_Education">enlace</a>)</li>
 		<li>Jara, J. (2021). Código informático y algoritmos como instrumentos musicales en educación. Murillo, Adolf; Tejada, Jesús; Riaño, Mª Elena y Berbel, Noemy (Coords). INSTRUMENTARIUM XX1. Nuevos sonidos en el aula de música. València: EdictOràlia Llibres i Publicacions, 2021, 306 p. ISBN: 978-84-123485-4-5. (<a href="https://www.edictoralia.com/instrumentarium-xx1-nuevos-sonidos-en-el-aula-de-musica/">enlace</a>)</li>
 		<li>Jara, J. (2021). Módulo 5: Aplicación de la Tecnología a la Música. En Master Universitario de Investigación Musical (Comp.). Universidad Europea Online.</li>
-                <li>Jara, J. (2022). Y tú, ¿qué música escuchas? No sé... la que sale en Youtube. Colección REVISTA EUFONIA, Num. 091 (ABRIL 22). <em>Música y STEAM</em>, pag 39. ISSN: 1135-6308. (<a href="https://www.grao.com/es/producto/revista-eufonia-091-abril-22-musica-y-steam-eu091/">enlace</a>)</li>
-		<li>Jara, J. (2022). Miniaturas algorítmicas. Revista SOBRE, 8, 57-63. https://doi.org/10.30827/sobre.v8i.25116. (<a href="https://revistaseug.ugr.es/index.php/sobre/article/view/25116">enlace</a>)</li>   
+                <li>Jara, J. (2022). <em>Y tú, ¿qué música escuchas? No sé... la que sale en Youtube</em>. Colección REVISTA EUFONIA, Num. 091 (ABRIL 22). <em>Música y STEAM</em>, pag 39. ISSN: 1135-6308. (<a href="https://www.grao.com/revistas/musica-y-steam-42807">enlace</a>)</li>
+		<li>Jara, J. (2022). <em>Miniaturas algorítmicas</em>. Revista SOBRE, 8, 57-63. https://doi.org/10.30827/sobre.v8i.25116. (<a href="https://revistaseug.ugr.es/index.php/sobre/article/view/25116">enlace</a>)</li>
+		<li>Jara, J. (2023). <em>Recursos Educativos para la educación musical</em>. En Grado de Musicología (Comp.). Universidad Europea Online.</li>
+		<li>Jara, J. (2024). <em>Podcasts {Serie(Secuencia)}.Musica</em>. RRS Radio del Reina Sofía. Material complementario. (<a href="https://radio.museoreinasofia.es/seriesecuenciamusica">enlace</a>)</li>
 		  	 </ul>
 		</p>
 
