--- a/public.html
+++ b/public.html
@@ -128,7 +128,7 @@
 				<li>Diplomatura en Magisterio, especialidad en Educación Primaria. Centro de Estudios Superiores "Don Bosco" adscrito a la Universidad Complutense de Madrid. 2003-2007.</li>
 				<li>Grado en Musicología y música informática. Hochschule für Musik Karlsruhe. Alemania. 2012-2015.</li>
 				<li>Master en Investigación Musical. Universidad Internacional de la Rioja. 2019-2021.</li>
-				<li>Master en Ingeniería Informática. Universidad Autónoma de Madrid. En curso.</li>
+				<li>Doctorado en eduación. Universidad Autónoma de Madrid. En curso.</li>
 			</ul>
 		</p>
         </div>
