--- a/eoe.html
+++ b/eoe.html
@@ -73,7 +73,7 @@
 		  <h3>Escuchar para cambiar, escuchar el cambio</h3>
 		  <p><a href="https://fundacionlacaixa.org/es/art-for-change-2021-proyecto-escucha-activa">Escuchar para cambiar, escuchar el cambio</a> es un proyecto que coordinamos durante el curso 2021-2022 seleccionado por la Fundación La Caixa dentro del programa Art For Change (2021) en el que profesionales de la pedagogía musical, la creación artística y la investigación proponen un proyecto centrado en la escucha activa como motor y fuerza transformadora capaz de reorganizar la escala de valores de las personas que escuchan. En el participan tanto el colectivo "Los Dragones de Lavapiés" como la Orquesta de Improvisación Libre "Farmacia 13".</p>
 		  <div class="video-container">
-		  <iframe src="https://player.vimeo.com/video/725556355?h=e3faeb24e5" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+		  <iframe width="560" height="315" src="https://www.youtube.com/embed/0MwCdBaTlyE?si=JZwiTS6dBp5ruVwF&amp;controls=0" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
           <p><a href="https://vimeo.com/725556355">Escuchar para cambiar, escuchar el cambio. Programa Art for Change 2021</a> from <a href="https://vimeo.com/user135638648">Jesus Jara</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 		  </div>
 		  
