--- a/musalgo.html
+++ b/musalgo.html
@@ -70,7 +70,7 @@
             <h1 class="h2">003 : Música Algorítmica</h1>
           </div>
 		  <p><br /></p>
-		<p>Desde mis años de formación en alemania cuando el gran compositor Denis Lorrain nos impartía la asignatura de música algorítmica tengo especial interés por la utilización de algoritmos 
+		<p>Desde mis años de formación en Alemania cuando el genial compositor Denis Lorrain nos impartía la asignatura de música algorítmica tengo especial interés por la utilización de algoritmos 
 		como forma de creación, y especialmente creación sonora. La sonificación, la combinatoria, la aleatoriedad y probabilidad, las estructuras fractales, los autómatas celulares, los sistemas L,
 			y tantos otros algoritmos se usan hoy en día para crear música entre otras cosas, con o sin la ayuda de un ordenador. </p>
 
