--- a/public.html
+++ b/public.html
@@ -132,8 +132,8 @@
 			</ul>
 		</p>
 		<p>
-		Recopilatorios musicales: 
-		<br />
+		Proyectos pedagógicos musicales: 
+		<br /><br />
 			<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4157597147/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://creaciondigitalsonora.bandcamp.com/album/sonotr-nica-1">Sonotrónica #1 de Curso 2023-2024</a></iframe>
 		</p>
         </div>
