--- a/public.html
+++ b/public.html
@@ -57,14 +57,16 @@
         <div class="section-container-spacer">
           <div class="text-center">
             <h1 class="h2">02 : Investigación y Docencia</h1>
-			<p>En diciembre del 2020 presenté el Trabajo Final de Master <a href="https://zenodo.org/record/4534134">"Educar en Otros Mundos Sonoros"</a>, que consiste en una revisión bibliográfica de material educativo orientado a la enseñanza de la música contemporánea.</p>
+			<p>En diciembre del 2020 presenté el Trabajo Final de Master <a href="https://zenodo.org/record/4534134">"Educar en Otros Mundos Sonoros"</a>, 
+			que consiste en una revisión bibliográfica de material educativo orientado a la enseñanza de la música contemporánea.
+			En 2023 comencé mi Doctorado en Educación en la Universidad Autónoma de Madrid titulado "The significance of coding in primary music education".</p>
 
           <blockquote>
             <p>"Los poemas, las letras y la música de esta grabación, todo ha sido creado por alumnado de enseñanza primaria"</p>
             <small class="pull-right">Robert Gittings. Classroom Projects (2013)</small>
           </blockquote>
 		  <br />
-		  <h4>Este video recoge el trabajo de investigación realizado hasta la fecha con respecto a la pedagogía de la música contemporánea.</h4>
+		  <h4>Este video ejemplifica el trabajo de investigación realizado hasta la fecha con respecto a la pedagogía de la música contemporánea.</h4>
 		  </div>
 		  <div class="text-center video-container">
 		  <iframe title="vimeo-player" src="https://player.vimeo.com/video/794470849?h=134f701743" width="640" height="360" frameborder="0" allowfullscreen></iframe>
@@ -106,9 +108,21 @@
 		<li>Jara, J. (2024). <em>Podcasts {Serie(Secuencia)}.Musica</em>. RRS Radio del Reina Sofía. Material complementario. (<a href="https://radio.museoreinasofia.es/seriesecuenciamusica">enlace</a>)</li>
 		  	 </ul>
 		</p>
+		<p>
+		Proyectos pedagógicos musicales: 
+		<br /><br />
+			<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4157597147/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://creaciondigitalsonora.bandcamp.com/album/sonotr-nica-1">Sonotrónica #1 de Curso 2023-2024</a></iframe>
+		</p>
 
 		<p> Docencia universitaria:
 			<ul>
+			<li><b>Curso 2024-2025</b>. 
+			<ul>
+				<li>Grado en Musicología. Recursos tecnológicos para la educación musical. Universidad Europea Online.</li>
+				<li>Grado en Diseño. Introducción a la Realidad Virtual y la Realidad Aumentada. Escuela Superior de Diseño de Madrid.</li>
+				<li>Master en Diseño Interactivo. Introducción a la Realidad Aumentada. Escuela Superior de Diseño de Madrid.</li>
+			</ul>
+		</li>
 		<li><b>Curso 2023-2024</b>. 
 			<ul>
 				<li>Grado en Musicología. Recursos tecnológicos para la educación musical. Universidad Europea Online.</li>
@@ -124,17 +138,12 @@
 		
 		<p> Formación académica:
 			<ul>
-                <li>Ingeniería Técnica en Informática de Sistemas. Universidad Complutense de Madrid. 2002-2006.</li>
-				<li>Diplomatura en Magisterio, especialidad en Educación Primaria. Centro de Estudios Superiores "Don Bosco" adscrito a la Universidad Complutense de Madrid. 2003-2007.</li>
-				<li>Grado en Musicología y música informática. Hochschule für Musik Karlsruhe. Alemania. 2012-2015.</li>
-				<li>Master en Investigación Musical. Universidad Internacional de la Rioja. 2019-2021.</li>
 				<li>Doctorado en eduación. Universidad Autónoma de Madrid. En curso.</li>
+				<li>Master en Investigación Musical. Universidad Internacional de la Rioja. 2019-2021.</li>
+				<li>Grado en Musicología y música informática. Hochschule für Musik Karlsruhe. Alemania. 2012-2015.</li>
+				<li>Diplomatura en Magisterio, especialidad en Educación Primaria. Centro de Estudios Superiores "Don Bosco" adscrito a la Universidad Complutense de Madrid. 2003-2007.</li>
+				<li>Ingeniería Técnica en Informática de Sistemas. Universidad Complutense de Madrid. 2002-2006.</li>
 			</ul>
-		</p>
-		<p>
-		Proyectos pedagógicos musicales: 
-		<br /><br />
-			<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4157597147/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://creaciondigitalsonora.bandcamp.com/album/sonotr-nica-1">Sonotrónica #1 de Curso 2023-2024</a></iframe>
 		</p>
         </div>
       </div>
