--- a/xr.html
+++ b/xr.html
@@ -72,6 +72,10 @@
           <p>Desde la primera edición del <a href="https://levfestival.com/">Festival LEV Matadero</a> en el 2019 colaboro en el diseño y producción de la sección VRTX de realidad extendida.
 		  También he formado parte del equipo de desarrollo de Planet LEV Matadero, coordinando las aportaciones de un equipo interdisciplinar
 		   de artistas, desarrollador_s y técnic_s.</p>
+		<h3>Project Officer de Realities in Transition</h3>
+		<p>Realities in Transition es un proyecto financiado por Creative Europe de formato intermedio. Liderado por Chroniques (Francia), los partners son: Ars Electronica (Austria), _V2 (Países Bajos), iMal (Bélgica), Dark Euphoria (Francia), Kontejner (Croacia) y LEV Festival (España).
+		Durante el desarrollo del proyecto he participado como project officer de LEV Festival. En este video podemos ver un resumen del recorrido realizado con este proyecto europeo.</p>
+		<iframe title="vimeo-player" src="https://player.vimeo.com/video/986569531?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="360" frameborder="0" allowfullscreen ></iframe>
 
 		<h3>Coordinación de proyectos VR</h3>
 		<p>Planet LEV Matadero es un entorno de realidad virtual creado por el Festival LEV y Matadero para la presentación de propuesta artísticas en este medio.
