--- a/medialab.html
+++ b/medialab.html
@@ -71,10 +71,10 @@
 			<p>Desde el 2015 al 2017 trabajé como mediador investiador en el centro cultural Medialab Prado. Durante esos años desempeñé labores de coordinación,
 			producción técnica de eventos, comisariado y diseño de actividades colaborativas y participacitas.
 			</p>
-			<h4>En este vídeo planteo un resumen de mi paso por Medialab Prado.</h4>
+			<h4>En este vídeo planteo un resumen del trabajo de mi equipo de Mediación/Investigación por Medialab Prado.</h4>
 		</div>
 		<div class="text-center video-container">
-			<iframe title="vimeo-player" src="https://player.vimeo.com/video/311208240?h=8d9de29ec1" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+			<iframe title="vimeo-player" src="https://player.vimeo.com/video/226022445?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="360" frameborder="0" allowfullscreen></iframe>
 		</div>
 
 		<div class="text-center">
