--- a/public.html
+++ b/public.html
@@ -26,6 +26,15 @@
 <div id="site-border-bottom"></div>
 <!-- Add your content of header -->
 <header>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TWBKYBEVXC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TWBKYBEVXC');
+</script>
   <nav class="navbar  navbar-fixed-top navbar-default">
     <div class="container">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
