--- a/xr.html
+++ b/xr.html
@@ -88,7 +88,7 @@
 		<iframe title="vimeo-player" src="https://player.vimeo.com/video/986569531?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="840" height="560" frameborder="0" allowfullscreen ></iframe>
 
 		<h3>Coordinación de proyectos VR</h3>
-		<p>Planet LEV Matadero es un entorno de realidad virtual creado por el Festival LEV y Matadero para la presentación de propuesta artísticas en este medio.
+		<p>Planet LEV Matadero es un entorno de realidad virtual creado por el Festival LEV y Matadero para la presentación de propuestas artísticas en este medio.
 		Esta plataforma tiene dos versiones, la <a href="https://levfestival.com/planet-lev-matadero/">versión web</a> y la versión para gafas de realidad virtual disponible gratuítamente en STEAM.</p>
 		<div class="video-container">
 		<iframe title="vimeo-player" src="https://player.vimeo.com/video/493190954?h=3f6fb50932" width="640" height="360" frameborder="0" allowfullscreen></iframe>
