--- a/public.html
+++ b/public.html
@@ -115,7 +115,9 @@
 		<li>Jara, J. (2022). <em>Miniaturas algorítmicas</em>. Revista SOBRE, 8, 57-63. https://doi.org/10.30827/sobre.v8i.25116. (<a href="https://revistaseug.ugr.es/index.php/sobre/article/view/25116">enlace</a>)</li>
 		<li>Jara, J. (2023). <em>Recursos Educativos para la educación musical</em>. En Grado de Musicología (Comp.). Universidad Europea Online.</li>
 		<li>Jara, J. (2024). <em>Podcasts {Serie(Secuencia)}.Musica</em>. RRS Radio del Reina Sofía. Material complementario. (<a href="https://radio.museoreinasofia.es/seriesecuenciamusica">enlace</a>)</li>
-		  	 </ul>
+		<li>Jara, J. (2024). <em>Sonotrónica: Live coding in the context of a music school</em> en Murillo Ribes, A., y J. Tejada. «Encounters Between Music, Education and Technology». Publicacions De La Universitat De Valencia, noviembre de 2024, https://omp.uv.es/index.php/PUV/article/view/764. </li>  	 
+		<li>Jara, J. (2024). <em>Live Code Mad. A learning community around live coding</em>. Teknokultura. Journal of Digital Culture and Social Movements , Online Advance , 1-3. https://doi.org/10.5209/tekn.95081	 
+			 </ul>
 		</p>
 		<p>
 		Proyectos pedagógicos musicales: 
