--- a/about.html
+++ b/about.html
@@ -81,8 +81,7 @@
 				  También soy cofundador del proyecto <a href="eoe.html">Escuela de Oficios Electrosonoros</a> en el que hemos
 				  desarrollado experiencias de arte educación en museos y centros educativos.</p>
 				  <h3>Gestión cultural</h3>
-                  <p>En <a href="medialab.html">Medialab Prado</a> conocí la gestión cultural, desde entonces siempre estoy metido en algo. Actualmente me encargo
-				  de coordinar la sección de <a href="xr.html">realidad virtual</a> del festival LEV Matadero. Aunque siempre hay cosas nuevas.
+                  <p>En <a href="medialab.html">Medialab Prado</a> conocí la gestión cultural, desde entonces siempre estoy metido en algo. Actualmente colaboro en la sección de <a href="xr.html">realidad virtual</a> del festival LEV Matadero. Aunque siempre hay cosas nuevas.
 				  Si quieres saber más, <a href="contact.html">pregúntame.</p>
                 </div>
                 <div class="col-xs-12 col-md-6"><br /><br />
